--- a/js-testing/js-class/access.html
+++ b/js-testing/js-class/access.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Accessing Parent Class in Javascript</title>
   </head>
   <body>
     <h1>Accessing Parent Class in Javascript</h1>
@@ -25,7 +25,7 @@
         }
       }
 
-      const child = new Child("Phue Phue", 23);
+      const child = new Child("Phyu", 23);
       child.showInfo();
 
       class Animal {
